# MyUtils

./: setup.cfg  setup.py
myutils/: __init__.py  plots.py  sn.py  stats.py  stuff.py
