[metadata]
name = MyUtils
author = Bastien Carreres
author_email = carreres@duke.edu
description = Package with different usefull python tools
long_description = file : README.md
license = BSD-3-Clause

[options]
packages =
    MyUtils
python_requires = >=3.9, <4
install_requires = 
    pandas >= 1.2.0
    numpy >= 1.23.0
    astropy >= 5.1.0
    shapely >= 1.8.0
    numba >= 0.56
    matplotlib
    scipy